--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"socket.io-client": "^4.8.1",
+		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.12"
 	},
 	"devDependencies": {
